--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -1,4 +1,4 @@
-@import "fontawesome-all.min.css";
+@import url(fontawesome-all.min.css);
 /*@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300");*/
 
 /*
@@ -94,7 +94,6 @@
 		box-sizing: inherit;
 	}
 
-
 	body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 		-moz-animation: none !important;
 		-webkit-animation: none !important;
@@ -123,7 +122,6 @@
 		background-attachment: fixed,			fixed,				fixed;
 	}
 
-
 		body:after {
 			content: '';
 			display: block;
@@ -135,8 +133,8 @@
 			opacity: 0;
 			z-index: 1;
 			background-color: #ffffff;
-			background-image: url("../images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
 			background-image: url("../images/overlay.png"), -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
+			background-image: url("../images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
 			background-image: url("../images/overlay.png"), -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
 			background-image: url("../images/overlay.png"), linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35));
 			background-repeat: repeat,			no-repeat;
@@ -147,7 +145,6 @@
 			-ms-transition: opacity 1.75s ease-out;
 			transition: opacity 1.75s ease-out;
 		}
-
 
 		body.is-preload:after {
 			opacity: 1;
