--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -142,7 +142,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   text-indent: 50px;
 }
 
-footer {
+#Myfooter {
   position: fixed;
   left: 0;
   bottom: 0;
