--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -36,19 +36,20 @@ body {
 
 .top{
   background: #4e89ae;
-  height: 80px;
+  height: 85px;
   border-top: 20px solid #43658b;
 }
 
 .top .title {
   width: 700px;
-  margin: 38px auto 0 auto;
+  margin: 28px auto 0 auto;
 }
 
 .title h1 {
   font-size:24px;
   color:#FFF;
   font-weight:500;
+	text-align:center;
 }
 
 .content{
