content for after body was removed

--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -123,7 +123,7 @@
 	}
 
 		body:after {
-			content: '';
+			/* content: ''; */
 			display: block;
 			position: fixed;
 			top: 0;
@@ -1048,7 +1048,7 @@
 		z-index: 2;
 	}
 
-		#wrapper > * {
+		#wrapper > *{
 			z-index: 1;
 		}
 
