--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -64,12 +64,13 @@
 		color: inherit;
 	}
 
-	input::-moz-focus-inner {
+	/* input::-moz-focus-inner {
 		border: 0;
 		padding: 0;
-	}
+	} */
 
-	input, select, textarea {
+	/* input, select, textarea */
+	select, textarea {
 		-moz-appearance: none;
 		-webkit-appearance: none;
 		-ms-appearance: none;
@@ -151,8 +152,8 @@
 		}
 
 /* Type */
-
-	body, input, select, textarea {
+/* body, input, select, textarea */
+	body, select, textarea {
 		color: #414f57;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 14pt;
@@ -164,7 +165,9 @@
 
 		@media screen and (max-width: 1680px) {
 
-			body, input, select, textarea {
+			/* body, input, select, textarea */
+
+			body, select, textarea {
 				font-size: 11pt;
 			}
 
@@ -355,7 +358,7 @@
 		margin: 0 0 0.75em 0;
 	}
 
-	input[type="text"],
+	/* input[type="text"],
 	input[type="password"],
 	input[type="email"],
 	input[type="tel"],
@@ -391,7 +394,7 @@
 		select:focus,
 		textarea:focus {
 			border-color: #ff7496;
-		}
+		} */
 
 	select {
 		background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='%23c8cccf' /%3E%3C/svg%3E");
@@ -416,18 +419,18 @@
 			display: none;
 		}
 
-	input[type="text"],
+	/* input[type="text"],
 	input[type="password"],
 	input[type="email"],
 	select {
 		height: 2.75em;
-	}
+	} */
 
 	textarea {
 		padding: 0.75em 1em;
 	}
 
-	input[type="checkbox"],
+	/* input[type="checkbox"],
 	input[type="radio"] {
 		-moz-appearance: none;
 		-webkit-appearance: none;
@@ -501,7 +504,7 @@
 
 	input[type="radio"] + label:before {
 		border-radius: 100%;
-	}
+	} */
 
 	::-webkit-input-placeholder {
 		color: #616f77 !important;
@@ -824,9 +827,9 @@
 
 /* Button */
 
-	input[type="submit"],
+	/* input[type="submit"],
 	input[type="reset"],
-	input[type="button"],
+	input[type="button"], */
 	button,
 	.button {
 		-moz-appearance: none;
@@ -851,60 +854,60 @@
 		white-space: nowrap;
 	}
 
-		input[type="submit"]:hover,
+		/* input[type="submit"]:hover,
 		input[type="reset"]:hover,
-		input[type="button"]:hover,
+		input[type="button"]:hover, */
 		button:hover,
 		.button:hover {
 			border-color: #ff7496;
 			color: #ff7496 !important;
 		}
 
-		input[type="submit"].icon,
+		/* input[type="submit"].icon,
 		input[type="reset"].icon,
-		input[type="button"].icon,
+		input[type="button"].icon, */
 		button.icon,
 		.button.icon {
 			padding-left: 1.35em;
 		}
 
-			input[type="submit"].icon:before,
+			/* input[type="submit"].icon:before,
 			input[type="reset"].icon:before,
-			input[type="button"].icon:before,
+			input[type="button"].icon:before, */
 			button.icon:before,
 			.button.icon:before {
 				margin-right: 0.5em;
 			}
 
-		input[type="submit"].fit,
+		/* input[type="submit"].fit,
 		input[type="reset"].fit,
-		input[type="button"].fit,
+		input[type="button"].fit, */
 		button.fit,
 		.button.fit {
 			width: 100%;
 		}
 
-		input[type="submit"].small,
+		/* input[type="submit"].small,
 		input[type="reset"].small,
-		input[type="button"].small,
+		input[type="button"].small, */
 		button.small,
 		.button.small {
 			font-size: 0.8em;
 		}
 
-		input[type="submit"].large,
+		/* input[type="submit"].large,
 		input[type="reset"].large,
-		input[type="button"].large,
+		input[type="button"].large, */
 		button.large,
 		.button.large {
 			font-size: 1.35em;
 		}
 
-		input[type="submit"].disabled, input[type="submit"]:disabled,
+		/* input[type="submit"].disabled, input[type="submit"]:disabled,
 		input[type="reset"].disabled,
 		input[type="reset"]:disabled,
 		input[type="button"].disabled,
-		input[type="button"]:disabled,
+		input[type="button"]:disabled, */
 		button.disabled,
 		button:disabled,
 		.button.disabled,
