--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -15,7 +15,7 @@
 	code, del, dfn, em, img, ins, kbd, q, s, samp,
 	small, strike, strong, sub, sup, tt, var, b,
 	u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-	form, label, legend, table, caption, tbody,
+	label, legend, table, caption, tbody,
 	tfoot, thead, tr, th, td, article, aside,
 	canvas, details, embed, figure, figcaption,
 	footer, header, hgroup, menu, nav, output, ruby,
@@ -279,7 +279,7 @@
 
 /* Form */
 
-	form {
+	/* form {
 		margin: 0 0 1.5em 0;
 	}
 
@@ -323,11 +323,11 @@
 
 				form > .fields > .field.quarter {
 					width: calc(25% - 0.28125em);
-				}
+				} */
 
 		@media screen and (max-width: 480px) {
 
-			form > .fields {
+			/* form > .fields {
 				width: calc(100% + 2.25em);
 				margin: -1.125em 0 1.5em -1.125em;
 			}
@@ -348,7 +348,7 @@
 					form > .fields > .field.quarter {
 						width: calc(100% - 1.125em);
 					}
-
+					*/
 		}
 
 	label {
