--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -60,6 +60,15 @@ body {
     width: 10rem;
 }
 
+#latest-posts {
+    background-color: rgba(78,137,174, 0.5);
+    padding: 2rem;
+    border-radius: 10px;
+    width: 60rem;
+    margin: -2rem auto 2rem auto;
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
+  }
+
 
 .wrapper{
   position: relative;
@@ -72,7 +81,7 @@ body {
 .sub-wrapper{
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-gap: 50px;
+	grid-gap: 10px;
 	justify-items: center;
 	align-items: center;
   }
@@ -93,7 +102,7 @@ body {
   font-size:24px;
   color:#FFF;
   font-weight:500;
-	text-align:center;
+  text-align:center;
 }
 
 .content{
@@ -146,11 +155,11 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 
 .card{
   position: relative;
-  /*background-color: #fff;*/
-  background-color: rgba(78,137,174, 0.5);
+  background-color: white;
+  /*background-color: rgba(78,137,174, 0.5);*/
   /*background-color: rgba(50, 115, 220, 10)*/
   padding:25px;
-  width: 300px;
+  width: 18em;
   margin: 100px auto 0 auto;
   /*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
   box-shadow:0 0 15px 5px #ccc;
@@ -165,6 +174,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 }
 
 .card h2 {
+  color:black;
   font-size:21px;
   font-weight:500;
 }
