--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -69,6 +69,10 @@ body {
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
   }
 
+  #latest-posts ul {
+    list-style: none;
+  }
+
 
 .wrapper{
   position: relative;
@@ -173,7 +177,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   margin: 100px auto 0 auto;
 }
 
-.card h2 {
+.card h2, h3 {
   color:black;
   font-size:21px;
   font-weight:500;
@@ -196,6 +200,32 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   letter-spacing: 3px;
   text-indent: 50px;
 }
+
+.post .card {
+    text-decoration: none;
+    color: black;
+    transition: all 0.2s ease;
+    padding: 1rem;
+  }
+
+.post .card:hover,
+.post .card:active {
+    transform: scale(1.1);
+    background-color: #390281;
+    color: white;
+  }
+
+  .post time {
+    color: #666666;
+    margin: 0.25rem;
+    font-style: italic;
+    font-size: 0.85rem;
+  }
+  
+  .post:hover time,
+  .post:active time {
+    color: white;
+  }
 
 #Myfooter {
   position: fixed;
