--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -168,20 +168,23 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   /*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
   box-shadow:0 0 15px 5px #ccc;
   border-radius:10px;
+  color:black;
+  font-size:1rem;
+  font-weight:bold;
 }
 
-.card_LR{
+/* .card_LR{
   position: relative;
   padding:25px;
   width: 600px;
   margin: 100px auto 0 auto;
-}
+} */
 
-.card h2, h3 {
+/* .card h3 {
   color:black;
-  font-size:21px;
-  font-weight:500;
-}
+  font-size:1rem;
+  font-weight:bold;
+} */
 
 .card h2 a {
   color:#CC0000;
@@ -200,6 +203,9 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   letter-spacing: 3px;
   text-indent: 50px;
 }
+.post a {
+	cursor: pointer;
+}
 
 .post .card {
     text-decoration: none;
@@ -211,9 +217,10 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .post .card:hover,
 .post .card:active {
     transform: scale(1.1);
-    background-color: #390281;
+    background-color: rgba(78,137,174, 0.5);
     color: white;
   }
+
 
   .post time {
     color: #666666;
