--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -81,10 +81,11 @@ body {
   width: 100%;
   overflow: hidden;
 }
-/* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
+
 .sub-wrapper{
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+	/* grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); */
 	grid-gap: 10px;
 	justify-items: center;
 	align-items: center;
