--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -248,6 +248,38 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
+#summary {
+	margin: 3rem auto 3rem auto;
+	padding: 2rem;
+	width: 90%;
+	max-width: 90rem;
+	border-radius: 16px;
+	background-color: #4e89ae;
+	position: relative;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+	height: 22rem;
+  }
+  
+  #summary h2 {
+	color: white;
+	font-size: 4.5rem;
+	margin-bottom: 0.25rem;
+  }
+
+  main {
+	width: 90%;
+	max-width: 90rem;
+	margin: 3rem auto;
+	background-color: white;
+	padding: 1rem;
+	border-radius: 12px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  }
+  
+  main p {
+	text-align: justify;
+  }
+
 	.icon {
 		text-decoration: none;
 		position: relative;
