--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -1,6 +1,10 @@
 /* @import url(fontawesome-all.min.css); */
 @import "fontawesome-all.min.css";
 
+* {
+	box-sizing: border-box;
+  }
+
 
 body {
 	height: 100%;
@@ -84,7 +88,8 @@ body {
 
 .sub-wrapper{
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); 
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); 
+	/* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));  */
 	/* grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr)); */
 	grid-gap: 10px;
 	justify-items: center;
@@ -164,8 +169,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   /*background-color: rgba(78,137,174, 0.5);*/
   /*background-color: rgba(50, 115, 220, 10)*/
   padding:25px;
-  width: 18em;
-  margin: 100px auto 0 auto;
+  width: 18rem;
+  margin: 2rem auto 0 auto;
   /*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
   box-shadow:0 0 15px 5px #ccc;
   border-radius:10px;
@@ -173,7 +178,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   font-size:1rem;
   font-weight:bold;
 }
-
+/* margin: -80px auto 10px;
+padding-bottom: 20px; */
 /* .card_LR{
   position: relative;
   padding:25px;
