--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -66,9 +66,10 @@ body {
 
 #latest-posts {
     background-color: rgba(78,137,174, 0.5);
-    padding: 2rem;
+    padding: 2rem 1rem 2rem 1rem;
     border-radius: 10px;
-    width: 60rem;
+    /* width: 60rem; */
+	max-width: 60rem;
     margin: -2rem auto 2rem auto;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
   }
@@ -169,7 +170,8 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   /*background-color: rgba(78,137,174, 0.5);*/
   /*background-color: rgba(50, 115, 220, 10)*/
   padding:25px;
-  width: 18rem;
+  /* width: 18rem; */
+  width: fit-content;
   margin: 2rem auto 0 auto;
   /*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
   box-shadow:0 0 15px 5px #ccc;
@@ -218,7 +220,7 @@ padding-bottom: 20px; */
     text-decoration: none;
     color: black;
     transition: all 0.2s ease;
-    padding: 1rem;
+    /* padding: 1rem; */
   }
 
 .post .card:hover,
