--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -22,16 +22,22 @@ body {
 	font-family: "Source Sans Pro", Helvetica, sans-serif;
 }
 
+/* #main-navigation h1{
+	color: white;
+
+} */
+
 #main-navigation h1{
-	width: 100%;
+	/* width: 100%; */
 	height: 5rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 0 10%;
-	position: absolute;
+	/* position: absolute; */
 	/* top: 0; */
-	left: 0;
+	/* left: 0; */
+	color: white;
   }
 
 #welcome {
@@ -176,9 +182,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   /*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
   box-shadow:0 0 15px 5px #ccc;
   border-radius:10px;
-  color:black;
-  font-size:1rem;
-  font-weight:bold;
+
 }
 /* margin: -80px auto 10px;
 padding-bottom: 20px; */
@@ -195,10 +199,10 @@ padding-bottom: 20px; */
   font-weight:bold;
 } */
 
-.card h2 a {
+/* .card h2 a {
   color:#CC0000;
   text-decoration:none;
-}
+} */
 
 .card .text {
   color:#212121;
@@ -207,18 +211,26 @@ padding-bottom: 20px; */
   line-height:22px;
 }
 
+.card h3{
+	text-align: center;
+	letter-spacing: 3px;
+	color:black;
+	font-size:1rem;
+	font-weight:bold;
+  }
+
 .card p{
   text-align: justify;
-  letter-spacing: 3px;
-  text-indent: 50px;
+  letter-spacing: 1px;
+  text-indent: 5px;
 }
-.post a {
+.post {
 	cursor: pointer;
+	
 }
 
 .post .card {
     text-decoration: none;
-    color: black;
     transition: all 0.2s ease;
     /* padding: 1rem; */
   }
