--- a/src/components/css/styles.css
+++ b/src/components/css/styles.css
@@ -170,20 +170,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 .btn-block { width: 100%; display:block; }
 
 
-.card{
-  position: relative;
-  background-color: white;
-  /*background-color: rgba(78,137,174, 0.5);*/
-  /*background-color: rgba(50, 115, 220, 10)*/
-  padding:25px;
-  /* width: 18rem; */
-  width: fit-content;
-  margin: 2rem auto 0 auto;
-  /*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
-  box-shadow:0 0 15px 5px #ccc;
-  border-radius:10px;
 
-}
 /* margin: -80px auto 10px;
 padding-bottom: 20px; */
 /* .card_LR{
@@ -203,6 +190,29 @@ padding-bottom: 20px; */
   color:#CC0000;
   text-decoration:none;
 } */
+
+.card{
+	position: relative;
+	background-color: white;
+	/*background-color: rgba(78,137,174, 0.5);*/
+	/*background-color: rgba(50, 115, 220, 10)*/
+	padding:25px;
+	/* width: 18rem; */
+	width: fit-content;
+	margin: 2rem auto 0 auto;
+	/*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
+	box-shadow:0 0 15px 5px #ccc;
+	border-radius:10px;
+	color:black;
+	font-size:1rem;
+	font-weight:bold;
+  }
+
+.post .card{
+    text-decoration: none;
+    transition: all 0.2s ease;
+  }
+
 
 .card .text {
   color:#212121;
@@ -229,14 +239,9 @@ padding-bottom: 20px; */
 	
 }
 
-.post .card {
-    text-decoration: none;
-    transition: all 0.2s ease;
-    /* padding: 1rem; */
-  }
 
 .post .card:hover,
-.post .card:active {
+.post .card:active{
     transform: scale(1.1);
     background-color: rgba(78,137,174, 0.5);
     color: white;
