--- a/src/containers/styles.css
+++ b/src/containers/styles.css
@@ -1,5 +1,5 @@
 /* @import url(fontawesome-all.min.css); */
-@import "fontawesome-all.min.css";
+@import url("../components/css/fontawesome-all.min.css");
 
 * {
 	box-sizing: border-box;
@@ -11,10 +11,10 @@ body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	background-color: #ffffff;
-	background-image: url("../images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../images/bg.jpg");
-	background-image: url("../images/overlay.png"), -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../images/bg.jpg");
-	background-image: url("../images/overlay.png"), -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../images/bg.jpg");
-	background-image: url("../images/overlay.png"), linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../images/bg.jpg");
+	background-image: url("../components/images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../components/images/bg.jpg");
+	background-image: url("../components/images/overlay.png"), -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../components/images/bg.jpg");
+	background-image: url("../components/images/overlay.png"), -ms-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../components/images/bg.jpg");
+	background-image: url("../components/images/overlay.png"), linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../components/images/bg.jpg");
 	background-repeat: repeat,no-repeat,no-repeat;
 	background-size: 100px 100px, cover,cover;
 	background-position: top left,		center center,		bottom center;
