--- a/src/components/Intro/main.css
+++ b/src/components/Intro/main.css
@@ -1,4 +1,4 @@
-@import url("../../css/fontawesome-all.min.css");
+@import "../../css/fontawesome-all.min.css";
 /*@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300");*/
 
 /*
