--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -191,10 +191,19 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	/*box-shadow: 0 2px 4px rgba(100,100,100,.1);*/
 	box-shadow:0 0 15px 5px #ccc;
 	border-radius:10px;
+	/* text-align: center; */
+	align-items: center;
 	/* color:black;
 	font-size:1rem;
 	font-weight:bold; */
   }
+
+.card img {
+	width: 5rem;
+	height: 5rem;
+	object-fit: cover;
+	border-radius: 40%;
+}
 
 .post .card{
     text-decoration: none;
@@ -203,7 +212,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 
 
 .card .text {
-  color:#212121;
+  /* color:#212121; */
   margin-top:20px;
   font-size:15px;
   line-height:22px;
