--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -287,6 +287,30 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	margin-bottom: 0.25rem;
   }
 
+#summary article {
+  position: absolute;
+  top: 2rem;
+  right: 3rem;
+  padding: 1rem 2rem;
+  border-radius: 12px;
+  text-align: right;
+  color: white;
+}
+
+#summary article img {
+    width: 12rem;
+    height: 12rem;
+    border-radius: 12px;
+    transform: rotateZ(5deg);
+    border: 5px solid white;
+    margin-bottom: 1rem;
+}
+
+#summary a {
+    color: white;
+    text-decoration: none;
+}
+
 main {
 	width: 90%;
 	max-width: 90rem;
