--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -311,6 +311,12 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     text-decoration: none;
 }
 
+#summary address {
+    font-weight: bold;
+	font-style: italic;
+	letter-spacing: 1px;
+}
+
 main {
 	width: 90%;
 	max-width: 90rem;
