--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -317,6 +317,10 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 	letter-spacing: 1px;
 }
 
+#summary time {
+    font-weight: bold;
+}
+
 main {
 	width: 90%;
 	max-width: 90rem;
