--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -341,6 +341,9 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 #summary time {
     font-weight: bold;
 }
+.myStrong {
+	font-weight: bold;
+}
 
 main {
 	width: 90%;
