--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -288,11 +288,65 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
     font-style: italic;
     font-size: 0.85rem;
   }
+
   
 .post:hover time,
 .post:active time {
     color: white;
   }
+
+/*Auth form*/
+.auth {
+	margin: 3rem auto;
+	width: 95%;
+	max-width: 25rem;
+	border-radius: 6px;
+	/*background-color: #4e89ae;*/
+	background-color: rgba(78,137,174, 0.5);
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	padding: 1rem;
+	text-align: center;
+	color: white;
+}
+	
+.control {
+	margin-bottom: 0.5rem;
+}
+	
+.actions {
+	margin-top: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.actions button {
+	cursor: pointer;
+	font: inherit;
+	color: white;
+	background-color: #9f5ccc;
+	border: 1px solid #9f5ccc;
+	border-radius: 4px;
+	padding: 0.5rem 2.5rem;
+}
+
+.actions button:hover {
+	background-color: #873abb;
+	border-color: #873abb;
+}
+
+.actions .toggle {
+	margin-top: 1rem;
+	background-color: transparent;
+	color: #9f5ccc;
+	border: none;
+	padding: 0.15rem 1.5rem;
+}
+
+.actions .toggle:hover {
+	background-color: transparent;
+	color: #ae82cc;
+}
 
 #Myfooter {
   /* position: fixed; */
