--- a/src/components/Intro/main.css
+++ b/src/components/Intro/main.css
@@ -861,11 +861,11 @@
 		/* input[type="submit"]:hover,
 		input[type="reset"]:hover,
 		input[type="button"]:hover, */
-		button:hover,
+		/* button:hover,
 		.button:hover {
 			border-color: #ff7496;
 			color: #ff7496 !important;
-		}
+		} */
 
 		/* input[type="submit"].icon,
 		input[type="reset"].icon,
