--- a/src/components/Game/game.css
+++ b/src/components/Game/game.css
@@ -49,7 +49,15 @@
   .game {
     display: flex;
     flex-wrap: wrap;
-  }
+    background-color: rgba(78,137,174, 0.5);
+    padding: 25px;
+    width: fit-content;
+    margin: 1rem auto 1rem auto;
+    box-shadow: 0 0 15px 5px #ccc;
+    border-radius: 10px;
+    /* text-align: center; */
+    border: 2px solid grey;
+}
   .game-info {
     margin: 15px;
     color: #ffffff;
@@ -57,4 +65,10 @@
   
   .board > div {
     display: flex;
+  }
+
+  /* check line-height in main styles*/
+
+  .board button {
+    line-height: 0;
   }
