--- a/src/components/Game/game.css
+++ b/src/components/Game/game.css
@@ -7,7 +7,7 @@
     padding: 5px;
     border: 2px solid #e5dc15;
     border-radius: 5px;
-    box-shadow: 0 12px #c2bb11, 0 18px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 12px #c2bb11, 0 18px rgba(78,137,174, 0.5);
     font-size: 60px;
     width: 90px;
     height: 80px;
@@ -61,6 +61,10 @@
   .game-info {
     margin: 15px;
     color: #ffffff;
+  }
+
+  .game-info ul{
+    list-style: none;
   }
   
   .board > div {
