--- a/src/components/Intro/main.css
+++ b/src/components/Intro/main.css
@@ -116,6 +116,7 @@
 
 	body {
 		height: 100%;
+		margin: 0;
 		background-color: #ffffff;
 		background-image: url("../../images/overlay.png"), -moz-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
 		background-image: url("../../images/overlay.png"), -webkit-linear-gradient(60deg, rgba(255, 165, 150, 0.5) 5%, rgba(0, 228, 255, 0.35)), url("../../images/bg.jpg");
@@ -125,6 +126,7 @@
 		background-size: 100px 100px, cover,				cover;
 		background-position: top left,		center center,		bottom center;
 		background-attachment: fixed,			fixed,				fixed;
+		font-family: "Source Sans Pro", Helvetica, sans-serif;
 	}
 
 		body:after {
