--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -1,15 +1,22 @@
 .canvas-container {
-  /* display: flex;
-  flex-direction: column; */
-
   background-color: rgba(78,137,174, 0.5);
-
   border-radius: 10px;
-  text-align: center;
   width: 90%;
-  margin: 3rem auto 3rem auto;
-  align-items: center;
+  margin: 2rem auto 2rem auto; 
 }
+
+.container-flex {
+  margin-top: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.container-flex .toggle {
+	margin-top: 1rem;
+}
+
   
 .my-canvas {
   vertical-align: bottom;
@@ -25,6 +32,7 @@
   color: white;
   font-weight: 400;
   font-size: 7rem;
+  margin: 0 0 1rem 0;
 }
 
   
