--- a/src/containers/MyApp/styles.css
+++ b/src/containers/MyApp/styles.css
@@ -1,9 +1,9 @@
 /* @import url(fontawesome-all.min.css); */
-@import url("../../css/fontawesome-all.min.css");
+/*@import url("../../css/fontawesome-all.min.css");*/
 
-* {
+/* * {
 	box-sizing: border-box;
-  }
+  } */
 
 
 /* body {
@@ -148,10 +148,10 @@
   /* border-top: 20px solid #43658b; */
 }
 
-.top .title {
+/* .top .title {
   width: 700px;
   margin: 28px auto 0 auto;
-}
+} */
 
 .title h2 {
   font-size:24px;
@@ -429,7 +429,7 @@ main {
 main p {
 	text-align: justify;
   }
-
+/*
 .icon {
 		text-decoration: none;
 		position: relative;
@@ -455,12 +455,12 @@ main p {
 
 .icon:before {
 	line-height: inherit;
-}
-
+}*/
+/*
 .icon.solid:before {
 	font-weight: 900;
-}
-
+}*/
+/*
 .icon.brands:before {
 	font-family: 'Font Awesome 5 Brands';
 }
@@ -478,15 +478,16 @@ font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f544";}
 
 .icon.twitter::before {
 	font-family: "Font Awesome 5 Brands";font-weight: 900; content: "\f099";}
-
+*/
+/*
 ul.icons {
 	cursor: default;
 	list-style: none;
 	padding-left: 0;
 	margin-top: -0.675em;
 	text-align: center;
-}
-
+}*/
+/*
 ul.icons li {
 	display: inline-block;
 	padding: 0.675em 0.5em;
@@ -551,7 +552,7 @@ ul.icons li a:hover {
 	}
 
 }
-
+*/
 
 .robots {
 	flex-wrap: wrap;
