--- a/src/css/main.css
+++ b/src/css/main.css
@@ -261,7 +261,7 @@ font-size: 1em;
 @media screen and (max-width: 480px) {
 
 h1 {
-font-size: 1.65em;
+font-size: 1.40em;
 }
 
 }
@@ -1448,10 +1448,24 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   /* width: 100%;  */
   background: linear-gradient(to right top, #4e89ae, #000508);
   padding: 1rem;
-  margin: 18rem 0 0 0;
+  /* margin: 18rem 0 0 0; */
   color: white;
   text-align: center;
   font-family: "Source Sans Pro", Helvetica, sans-serif;
+}
+
+@media screen and (max-width: 480px) {
+	#summary {
+		display: flex;
+		flex-direction: column;
+		height: 37rem !important;
+	}
+
+	#summary article {
+		position: unset !important;
+		/*flex-basis: 50%;*/
+	}
+	
 }
 
 #summary {
@@ -1468,7 +1482,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
   
 #summary h2 {
 	color: white;
-	font-size: 4.5rem;
+	font-size: 3.5rem;
 	margin-bottom: 0.25rem;
   }
 
